[package]
name = "portals"
version = "0.1.0"
authors = ["ilya sheprut <optozorax@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# macroquad = { git = "https://github.com/not-fl3/macroquad", commit = "d2c1f0e" }
macroquad = { path = "../macroquad" }
# macroquad-profiler = { git = "https://github.com/not-fl3/macroquad" }
macroquad-profiler = { path = "../macroquad/profiler" }
glam = { version = "0.12.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
smallvec = "1.6.1"
indicatif = "0.15.0"
argmin = { version = "0.3.1", features = ["ctrlc", "ndarrayl"] }
finitediff = { version = "0.1.1", features = ["ndarray"] }
ndarray = { version = "0.13", features = ["blas"] }
blas-src = { version = "0.7.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.9", default-features = false, features = ["cblas", "system"] }
rand = "0.8.3"
png = "0.16.8"
differential-evolution = "0.2.2"
itertools = "0.10.0"
approx = "0.4.0"
colorgrad = "0.3.0"
rayon = "1.5.0"

[patch.crates-io]
# macroquad = { git = "https://github.com/not-fl3/macroquad.git", commit = "d2c1f0e" }
macroquad = { path = "../macroquad" }